--- a/posts/ml/generative_deep_learning/lesson2/chapter2_mlp.ipynb
+++ b/posts/ml/generative_deep_learning/lesson2/chapter2_mlp.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Generative AI: Chapter 2\"\n",
-    "description: \"Intro to deep learning\"\n",
+    "title: \"Generative AI Part 2: Deep Learning Foundations\"\n",
+    "description: \"The building blocks for generative AI\"\n",
     "date: \"2024-02-26\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, GenerativeAI]\n",
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "# Deep Learning\n",
-    "These are notes from chapter 2 of Generative Deep Learning by David Foster.\n",
+    "Notes on deep learning concepts in the context of generative AI.\n",
     "\n",
     "\n",
     "## 1. What is Deep Learning?\n",
@@ -861,11 +861,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fed51ea0-74cc-41a9-adfa-ccb3da5ad880",
+   "cell_type": "markdown",
+   "id": "f195514d",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## References\n",
+    "\n",
+    "- Chapter 2 of Generative Deep Learning by David Foster.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eb5ad99",
+   "metadata": {},
    "source": []
   }
  ],
