--- a/posts/ml/generative_deep_learning/lesson3/chapter3.ipynb
+++ b/posts/ml/generative_deep_learning/lesson3/chapter3.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Generative AI: Chapter 3\"\n",
+    "title: \"Generative AI Part 3: VAEs\"\n",
     "description: \"Variational Autoencoders\"\n",
     "date: \"2024-03-06\"\n",
     "# image: \"deep_learning_model.png\"\n",
@@ -21,7 +21,8 @@
    "metadata": {},
    "source": [
     "# Variational Autoencoders\n",
-    "These are notes from chapter 3 of Generative Deep Learning by David Foster.\n",
+    "\n",
+    "Notes on VAEs.\n",
     "\n",
     "::: {.callout-tip title=\"Story Time\"}\n",
     "Imagine an infinite wardrobe organised by \"type\" of clothing. \n",
@@ -1529,10 +1530,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## References\n",
+    "\n",
+    "- Chapter 3 of Generative Deep Learning by David Foster.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
