--- a/posts/ml/generative_deep_learning/lesson2/chapter2_mlp.ipynb
+++ b/posts/ml/generative_deep_learning/lesson2/chapter2_mlp.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Generative AI Part 2: Deep Learning Foundations\"\n",
-    "description: \"The building blocks for generative AI\"\n",
+    "title: \"Generative AI: Deep Learning Foundations\"\n",
+    "description: \"Part 2: The Building Blocks for Generative AI\"\n",
     "date: \"2024-02-26\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, GenerativeAI]\n",
