--- a/posts/ml/generative_deep_learning/lesson3/chapter3.ipynb
+++ b/posts/ml/generative_deep_learning/lesson3/chapter3.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Generative AI Part 3: VAEs\"\n",
-    "description: \"Variational Autoencoders\"\n",
+    "title: \"Generative AI: VAEs\"\n",
+    "description: \"Part 3: Variational Autoencoders\"\n",
     "date: \"2024-03-06\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, GenerativeAI, VAE]\n",
