--- a/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
+++ b/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Generative AI Part 4: GANs\"\n",
-    "description: \"Generative Adversarial Networks\"\n",
+    "title: \"Generative AI: GANs\"\n",
+    "description: \"Part 4: Generative Adversarial Networks\"\n",
     "date: \"2024-04-01\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [AI, Engineering, GenerativeAI, GAN]\n",
@@ -58,7 +58,6 @@
     "\n",
     "## 2. Building a Deep Convolutional GAN\n",
     "We will implement a GAN to generate [pictures of bricks](https://www.kaggle.com/datasets/joosthazelzet/lego-brick-images).\n",
-    "\n",
     "\n"
    ]
   },
@@ -71,7 +70,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "### 2.1. Load and pre-process "
+   ]
   },
   {
    "cell_type": "code",
