Outline GAN chapter

--- a/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
+++ b/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
@@ -56,22 +56,61 @@
     "\n",
     "\n",
     "\n",
-    "## 2. Building a Deep Convolutional GAN\n",
+    "## 2. Building a Deep Convolutional GAN (DCGAN)\n",
     "We will implement a GAN to generate [pictures of bricks](https://www.kaggle.com/datasets/joosthazelzet/lego-brick-images).\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
    "source": [
-    "### 2.1. Load and pre-process "
+    "### 2.1. Load and pre-process the data\n",
+    "\n",
+    "### 2.2. Build the Discriminator\n",
+    "\n",
+    "#### tanh vs sigmoid activation\n",
+    "\n",
+    "### 2.3. Build the Generator\n",
+    "\n",
+    "#### Conv2DTranspose\n",
+    "\n",
+    "### 2.4. Train the GAN\n",
+    "Alternate not simultaneously.\n",
+    "\n",
+    "\n",
+    "## 3. Analysing the GAN\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 4. GAN Training Tips\n",
+    "\n",
+    "\n",
+    "## 5. Wasserstein GAN with Gradient Penalty (WGAN-GP)\n",
+    "\n",
+    "### 5.1. Wasserstein Loss\n",
+    "\n",
+    "### 5.2. Lipschitz Constraint\n",
+    "\n",
+    "### 5.3. Gradient Penalty Loss\n",
+    "\n",
+    "### 5.4. Training the WGAN-GP\n",
+    "\n",
+    "### 5.5. Analysing the WGAN-GP\n",
+    "\n",
+    "\n",
+    "## 6. Conditional GAN (CGAN)\n",
+    "\n",
+    "### 6.1. CGAN Architecture\n",
+    "\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "- Chapter 4 of Generative Deep Learning by David Foster.\n"
    ]
   },
   {
@@ -111,9 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References\n",
-    "\n",
-    "- Chapter 4 of Generative Deep Learning by David Foster.\n"
+    "\n"
    ]
   }
  ],
