Outline making learning whole notes

--- a/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
+++ b/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
@@ -559,71 +559,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EPOCHS = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n",
-      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+      "Epoch 1/100\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/300\n",
-      "  4/313 [..............................] - ETA: 7:39 - d_loss: 0.3834 - d_real_acc: 0.8125 - d_fake_acc: 0.7051 - d_acc: 0.7588 - g_loss: 1.5256 - g_acc: 0.2949"
+      "313/313 [==============================] - 459s 1s/step - d_loss: 0.0252 - d_real_acc: 0.9011 - d_fake_acc: 0.9013 - d_acc: 0.9012 - g_loss: 5.3464 - g_acc: 0.0987\n",
+      "Epoch 2/100\n",
+      "313/313 [==============================] - 459s 1s/step - d_loss: 0.0454 - d_real_acc: 0.8986 - d_fake_acc: 0.8997 - d_acc: 0.8992 - g_loss: 5.2642 - g_acc: 0.1002\n",
+      "Epoch 3/100\n",
+      "313/313 [==============================] - 458s 1s/step - d_loss: 0.0556 - d_real_acc: 0.8958 - d_fake_acc: 0.8975 - d_acc: 0.8967 - g_loss: 4.9679 - g_acc: 0.1025\n",
+      "Epoch 4/100\n",
+      "184/313 [================>.............] - ETA: 3:12 - d_loss: 0.0255 - d_real_acc: 0.9028 - d_fake_acc: 0.9069 - d_acc: 0.9048 - g_loss: 5.3078 - g_acc: 0.0931"
      ]
     }
    ],
    "source": [
     "dcgan.compile(\n",
-    "    d_optimizer=optimizers.Adam(\n",
+    "    d_optimizer=optimizers.legacy.Adam(\n",
     "        learning_rate=LEARNING_RATE, beta_1=ADAM_BETA_1, beta_2=ADAM_BETA_2\n",
     "    ),\n",
-    "    g_optimizer=optimizers.Adam(\n",
+    "    g_optimizer=optimizers.legacy.Adam(\n",
     "        learning_rate=LEARNING_RATE, beta_1=ADAM_BETA_1, beta_2=ADAM_BETA_2\n",
     "    ),\n",
     ")\n",
     "# Create a model save checkpoint\n",
-    "model_checkpoint_callback = callbacks.ModelCheckpoint(\n",
-    "    filepath=\"./checkpoint/checkpoint.ckpt\",\n",
-    "    save_weights_only=True,\n",
-    "    save_freq=\"epoch\",\n",
-    "    verbose=0,\n",
-    ")\n",
+    "# model_checkpoint_callback = callbacks.ModelCheckpoint(\n",
+    "#     filepath=\"./checkpoint/checkpoint.ckpt\",\n",
+    "#     save_weights_only=True,\n",
+    "#     save_freq=\"epoch\",\n",
+    "#     verbose=0,\n",
+    "# )\n",
     "\n",
-    "tensorboard_callback = callbacks.TensorBoard(log_dir=\"./logs\")\n",
+    "# tensorboard_callback = callbacks.TensorBoard(log_dir=\"./logs\")\n",
     "\n",
     "\n",
-    "class ImageGenerator(callbacks.Callback):\n",
-    "    def __init__(self, num_img, latent_dim):\n",
-    "        self.num_img = num_img\n",
-    "        self.latent_dim = latent_dim\n",
+    "# class ImageGenerator(callbacks.Callback):\n",
+    "#     def __init__(self, num_img, latent_dim):\n",
+    "#         self.num_img = num_img\n",
+    "#         self.latent_dim = latent_dim\n",
     "\n",
-    "    def on_epoch_end(self, epoch, logs=None):\n",
-    "        random_latent_vectors = tf.random.normal(\n",
-    "            shape=(self.num_img, self.latent_dim)\n",
-    "        )\n",
-    "        generated_images = self.model.generator(random_latent_vectors)\n",
-    "        generated_images = generated_images * 127.5 + 127.5\n",
-    "        generated_images = generated_images.numpy()\n",
-    "        display(\n",
-    "            generated_images,\n",
-    "            save_to=\"./output/generated_img_%03d.png\" % (epoch),\n",
-    "        )\n",
+    "#     def on_epoch_end(self, epoch, logs=None):\n",
+    "#         random_latent_vectors = tf.random.normal(\n",
+    "#             shape=(self.num_img, self.latent_dim)\n",
+    "#         )\n",
+    "#         generated_images = self.model.generator(random_latent_vectors)\n",
+    "#         generated_images = generated_images * 127.5 + 127.5\n",
+    "#         generated_images = generated_images.numpy()\n",
+    "#         display_images(\n",
+    "#             generated_images,\n",
+    "#             save_to=\"./output/generated_img_%03d.png\" % (epoch),\n",
+    "#         )\n",
     "dcgan.fit(\n",
     "    train,\n",
     "    epochs=EPOCHS,\n",
-    "    callbacks=[\n",
-    "        model_checkpoint_callback,\n",
-    "        tensorboard_callback,\n",
-    "        ImageGenerator(num_img=10, latent_dim=Z_DIM),\n",
-    "    ],\n",
+    "    # callbacks=[\n",
+    "    #     # model_checkpoint_callback,\n",
+    "    #     # tensorboard_callback,\n",
+    "    #     ImageGenerator(num_img=10, latent_dim=Z_DIM),\n",
+    "    # ],\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the final models\n",
+    "generator.save(\"./models/generator\")\n",
+    "discriminator.save(\"./models/discriminator\")"
    ]
   },
   {
