WGAN notes and start CGAN

--- a/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
+++ b/posts/ml/generative_deep_learning/lesson4/chapter4.ipynb
@@ -1080,15 +1080,109 @@
     "1. A meaningful loss metric that correlates with generator convergence. This allows for better monitoring of training.\n",
     "2. More stable optimisation process.\n",
     "\n",
-    "### 5.1. Wasserstein Loss\n",
+    "### 5.1. Wassertein Loss\n",
+    "\n",
+    "#### Revisiting Binary Cross-Entropy Loss\n",
+    "First, recall the **binary cross-entropy loss**, which is defined as:\n",
+    "$$\n",
+    "-\\frac{1}{n} \\sum_{i=1}^{n}{y_i log(p_i) + (1 - y_i)log(1-p_i)}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "In a regular GAN, the discriminator compares the predictions for real images $p_i = D(x_i)$ to the response $y_i = 1$, and it compares the predictions for generated images $p_i = D(G(z_i))$ to the response $y_i = 0$.\n",
+    "\n",
+    "So the discriminator loss minimisation can be written as:\n",
+    "$$\n",
+    "\\min_{D} -(E_{x \\sim p_X}[log D(x)] + E_{z \\sim p_Z}[log (1 - D(G(z))] )\n",
+    "$$\n",
+    "\n",
+    "The generator aims to trick the discriminator into believing the images are real, so it compares the discriminator's predicted response to the desired response of $y_i=1$.\n",
+    "So the generator loss minimisation can be written as:\n",
+    "$$\n",
+    "\\min_{G} -(E_{z \\sim p_Z}[log D(G(z)] )\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "#### Introducing Wasserstein Loss\n",
+    "In contrast , the **Wasserstein loss function** is defined as:\n",
+    "$$\n",
+    "-\\frac{1}{n} \\sum_{i=1}^{n}{y_i p_i}\n",
+    "$$\n",
+    "\n",
+    "It requires that we use $y_i=1$ and $y_i=-1$ as labels rather than 1 and 0. We also remove the final sigmoid activation layer, which constrained the output to the range $[0, 1]$, meaning the output can now be any real number in the range $(-\\infty, \\infty)$.\n",
+    "\n",
+    "Because of these changes, rather than referring to a *discriminator* which outputs a *probability*, for WGANs we refer to a *critic* which outputs a *score*.\n",
+    "\n",
+    "With these changes of labels to -1 and 1, the critic loss minimisation becomes:\n",
+    "$$\n",
+    "\\min_{D} -(E_{x \\sim p_X}[D(x)] - E_{z \\sim p_Z}[D(G(z)] )\n",
+    "$$\n",
+    "\n",
+    "i.e. it aims to maximise the difference in predictions between real and generated images.\n",
+    "\n",
+    "The generator is still trying to trick the critic as in a regular GAN, so it wants the critic to score its generated images as highly as possible. To this end, it still compares to the desired critic response of $y_i=1$ corresponding to the critic believing the generated image is real. So the generator loss minimisation remains similar, just without the log:\n",
+    "$$\n",
+    "\\min_{G} -(E_{z \\sim p_Z}[D(G(z)] )\n",
+    "$$\n",
+    "\n",
     "\n",
     "### 5.2. Lipschitz Constraint\n",
     "\n",
+    "Allowing the critic to use the range $(-\\infty, \\infty)$ initially seems a bit counterintuitive - usually we want to avoid large numbers in neural networks otherwise gradients explode!\n",
+    "\n",
+    "There is an additional constraint placed on the critic requiring it to be a *1-Lipschitz continuous function*. This means that for any two input images, $x_1$ and $x_2$, it satisfied the following inequality:\n",
+    "$$\n",
+    "\\frac{| D(x_1) - D(x_2) |}{| x_1 - x_2 |} \\le 1\n",
+    "$$\n",
+    "\n",
+    "Recall that the critic is a function $D$ which converts an image into a scalar prediction. The numerator is the change in predictions, and the denominator is the average pixelwise difference. So this is essentially a limit on how sharply the critic predictions are allowed to change for a given image perturbation.\n",
+    "\n",
+    "An in-depth exploration of why the Wasserstein loss requires this constraint is given [here](https://jonathan-hui.medium.com/gan-wasserstein-gan-wgan-gp-6a1a2aa1b490).\n",
+    "\n",
+    "\n",
+    "#### Enforcing the Lipschitz Constraint\n",
+    "\n",
+    "One crude way of enforcing the constraint suggested by the original authors (and described as \"a terrible way to enforce a Lipschitz constraint) is to clip the weights to $[-0.01, 0.01]$ after each training batch. However, this diminishes the critic's ability to learn.\n",
+    "\n",
+    "An improved approach is to introduce a gradient penalty term to penalise the gradient norm when it deviates from 1.\n",
+    "\n",
+    "\n",
     "### 5.3. Gradient Penalty Loss\n",
+    "\n",
     "\n",
     "### 5.4. Training the WGAN-GP\n",
     "\n",
-    "### 5.5. Analysing the WGAN-GP\n"
+    "When training WGANs, we train the critic to convergence and then the train the generator. This ensures the gradients used for the generator update are accurate.\n",
+    "\n",
+    "This is a major benefit over traditional GANs, where we must balance the alternating training of generator and discriminator.\n",
+    "\n",
+    "We train the critic several times between each generator training step. A typical ratio is 3-5 critic updates for each generator update.\n",
+    "\n",
+    "Note that **batch normalisation shouldn't be used for WGAN-GP** because it creates correlation between images of a given batch, which makes the GP term less effective.\n",
+    "\n",
+    "\n",
+    "### 5.5. Analysing the WGAN-GP\n",
+    "\n",
+    "Images produced by VAEs tend to produce softer images that blur colour boundaries, whereas GANs produce sharper, more well-defined.\n",
+    "\n",
+    "However, GANs typically take longer to train and can be more sensitive to hyperparameter choices to reach a satisfactory result.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Conditional GAN (CGAN)\n",
+    "\n",
+    "Conditional GANs allow us to control the *type* of image that is generated. For example, should we generate a large or small brick? A male or female face?\n",
+    "\n",
+    "\n",
+    "### 6.1. CGAN Architecture\n",
+    "\n",
+    "The key difference of a CGAN is we pass a one-hot encoded label.\n",
+    "\n",
+    "For the generator, we append the one-hot encoded label vector to the random noise input to the generator.\n",
+    "For the critic, we append the one-hot encoded label vector to the image. If it has multiple channels, as in an RGB image, the label vector is repeated on each of the channels to fit the required shape.\n"
    ]
   },
   {
@@ -1099,14 +1193,10 @@
     }
    },
    "source": [
-    "## 6. Conditional GAN (CGAN)\n",
-    "\n",
-    "### 6.1. CGAN Architecture\n",
-    "\n",
-    "\n",
     "## References\n",
     "\n",
-    "- Chapter 4 of Generative Deep Learning by David Foster.\n"
+    "- Chapter 4 of Generative Deep Learning by David Foster.\n",
+    "- [Wasserstein loss and Lipschitz constraint](https://jonathan-hui.medium.com/gan-wasserstein-gan-wgan-gp-6a1a2aa1b490)"
    ]
   },
   {
